--- a/PimTest/PimTest.csproj
+++ b/PimTest/PimTest.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Note.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SearchEngine.cs" />
     <Compile Include="SearchHit.cs" />
   </ItemGroup>
   <ItemGroup>
