--- a/PimTest/packages.config
+++ b/PimTest/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Common.Logging" version="2.3.1" targetFramework="net461" />
-  <package id="Couchbase.Lite" version="1.2.0.3" targetFramework="net461" />
-  <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.2" targetFramework="net461" />
+  <package id="Couchbase.Lite" version="1.2.1.1" targetFramework="net461" />
+  <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.2.1.1" targetFramework="net461" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net461" />
   <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net461" />
   <package id="Lucene.Net.Linq" version="3.5.3" targetFramework="net461" />
@@ -11,5 +11,7 @@
   <package id="Remotion.Linq" version="1.13.183.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="SharpZipLib.Portable" version="0.86.0.0003" targetFramework="net461" />
-  <package id="Stateless" version="2.5.21.0" targetFramework="net461" />
+  <package id="SQLitePCL.raw" version="0.8.6" targetFramework="net461" />
+  <package id="SQLitePCL.ugly" version="0.8.6" targetFramework="net461" />
+  <package id="Stateless" version="2.5.61.0" targetFramework="net461" />
 </packages>
