--- a/PimTest/PimTest.csproj
+++ b/PimTest/PimTest.csproj
@@ -137,22 +137,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ILuceneIndex.cs" />
-    <Compile Include="INote.cs" />
-    <Compile Include="INoteHeader.cs" />
-    <Compile Include="LuceneIndex.cs" />
-    <Compile Include="LuceneNoteAdapter.cs" />
-    <Compile Include="Note.cs" />
-    <Compile Include="NoteHeader.cs" />
-    <Compile Include="NoteStorage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SearchEngine.cs" />
-    <Compile Include="SearchHit.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\AuNoteLib\AuNoteLib.csproj">
+      <Project>{5f0c603e-f305-4d23-8d6f-cd8aec00cbc4}</Project>
+      <Name>AuNoteLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCL.raw.0.8.6\build\net45\SQLitePCL.raw.targets" Condition="Exists('..\packages\SQLitePCL.raw.0.8.6\build\net45\SQLitePCL.raw.targets')" />
