--- a/AuNote/packages.config
+++ b/AuNote/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net452" />
   <package id="Couchbase.Lite" version="1.2.1.1" targetFramework="net452" />
   <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.2.1.1" targetFramework="net452" />
+  <package id="log4net" version="2.0.5" targetFramework="net452" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net452" />
   <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net452" />
   <package id="MvvmLight" version="5.3.0.0" targetFramework="net452" />
