--- a/AuNote/App.config
+++ b/AuNote/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <appSettings>
+    <add key="FulltextIndexLanguages" value="English,Russian"/>
+    <add key="DefaultFulltextIndexLanguage" value="English"/>
+  </appSettings>
 </configuration>
