--- a/PimTest/app.config
+++ b/PimTest/app.config
@@ -1,12 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
-  <appSettings>
-    <add key="FulltextIndexLanguages" value="English,Russian" />
-    <add key="DefaultFulltextIndexLanguage" value="English" />
-  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -16,6 +9,10 @@
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-10.0.0.0" newVersion="10.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Remotion.Linq" publicKeyToken="fee00910d6e5f53b" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.15.9.0" newVersion="1.15.9.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
