--- a/PimTest/packages.config
+++ b/PimTest/packages.config
@@ -1,17 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Common.Logging" version="2.3.1" targetFramework="net461" />
-  <package id="Couchbase.Lite" version="1.2.1.1" targetFramework="net461" />
-  <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.2.1.1" targetFramework="net461" />
+  <package id="Couchbase.Lite" version="1.4.0" targetFramework="net461" />
+  <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.4.0" targetFramework="net461" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net461" />
   <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net461" />
-  <package id="Lucene.Net.Linq" version="3.5.3" targetFramework="net461" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net461" />
+  <package id="Lucene.Net.Linq" version="3.6.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net461" />
   <package id="NFluent" version="1.3.1.0" targetFramework="net461" />
-  <package id="Remotion.Linq" version="1.13.183.0" targetFramework="net461" />
+  <package id="Remotion.Linq" version="1.15.9.0" targetFramework="net461" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
   <package id="SharpZipLib.Portable" version="0.86.0.0003" targetFramework="net461" />
-  <package id="SQLitePCL.raw" version="0.8.6" targetFramework="net461" />
-  <package id="SQLitePCL.ugly" version="0.8.6" targetFramework="net461" />
-  <package id="Stateless" version="2.5.61.0" targetFramework="net461" />
+  <package id="SQLitePCL.native.sqlite3.v110_xp" version="0.9.3" targetFramework="net461" />
+  <package id="SQLitePCL.plugin.sqlite3.net45" version="0.9.3" targetFramework="net461" />
+  <package id="SQLitePCL.raw" version="0.9.3" targetFramework="net461" />
+  <package id="SQLitePCL.ugly" version="0.9.3" targetFramework="net461" />
+  <package id="Stateless" version="3.1.0" targetFramework="net461" />
 </packages>
