--- a/AuNoteLib/AuNoteLib.csproj
+++ b/AuNoteLib/AuNoteLib.csproj
@@ -160,6 +160,7 @@
   <ItemGroup>
     <Compile Include="DocumentStorageWithFulltextSearch.cs" />
     <Compile Include="FulltextException.cs" />
+    <Compile Include="ICouchbaseDocumentAdapter.cs" />
     <Compile Include="IDocumentStorage.cs" />
     <Compile Include="IDocumentStorageWithFulltextSearch.cs" />
     <Compile Include="IFulltextSearchEngine.cs" />
@@ -173,8 +174,9 @@
     <Compile Include="LuceneNoteAdapter.cs" />
     <Compile Include="MultiIndex.cs" />
     <Compile Include="Note.cs" />
+    <Compile Include="NoteCouchbaseAdapter.cs" />
     <Compile Include="NoteHeader.cs" />
-    <Compile Include="NoteStorage.cs" />
+    <Compile Include="CouchbaseStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilding\BooleanOperation.cs" />
     <Compile Include="QueryBuilding\FullTextQueryTerm.cs" />
