--- a/PimTest/PimTest.csproj
+++ b/PimTest/PimTest.csproj
@@ -153,9 +153,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AuNoteLib\AuNoteLib.csproj">
+    <ProjectReference Include="..\AuNoteLib\FulltextStorageLib.csproj">
       <Project>{5f0c603e-f305-4d23-8d6f-cd8aec00cbc4}</Project>
-      <Name>AuNoteLib</Name>
+      <Name>FulltextStorageLib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
