--- a/AspNetPim/AspNetPim.csproj
+++ b/AspNetPim/AspNetPim.csproj
@@ -261,9 +261,9 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AuNoteLib\AuNoteLib.csproj">
+    <ProjectReference Include="..\AuNoteLib\FulltextStorageLib.csproj">
       <Project>{5f0c603e-f305-4d23-8d6f-cd8aec00cbc4}</Project>
-      <Name>AuNoteLib</Name>
+      <Name>FulltextStorageLib</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
