--- a/AuNote/AuNote.csproj
+++ b/AuNote/AuNote.csproj
@@ -222,9 +222,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AuNoteLib\AuNoteLib.csproj">
+    <ProjectReference Include="..\AuNoteLib\FulltextStorageLib.csproj">
       <Project>{5f0c603e-f305-4d23-8d6f-cd8aec00cbc4}</Project>
-      <Name>AuNoteLib</Name>
+      <Name>FulltextStorageLib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
