--- a/PimTest/PimTest.csproj
+++ b/PimTest/PimTest.csproj
@@ -153,7 +153,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\AuNoteLib\FulltextStorageLib.csproj">
+    <ProjectReference Include="..\FulltextStorageLib\FulltextStorageLib.csproj">
       <Project>{5f0c603e-f305-4d23-8d6f-cd8aec00cbc4}</Project>
       <Name>FulltextStorageLib</Name>
     </ProjectReference>
