Indexed storage specialization for notes

--- a/FulltextStorageLib/FulltextStorageLib.csproj
+++ b/FulltextStorageLib/FulltextStorageLib.csproj
@@ -177,6 +177,7 @@
     <Compile Include="NoteCouchbaseAdapter.cs" />
     <Compile Include="NoteHeader.cs" />
     <Compile Include="CouchbaseStorage.cs" />
+    <Compile Include="NoteStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilding\BooleanOperation.cs" />
     <Compile Include="QueryBuilding\FullTextQueryTerm.cs" />
