--- a/FulltextStorageLib/FulltextStorageLib.csproj
+++ b/FulltextStorageLib/FulltextStorageLib.csproj
@@ -159,6 +159,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DocumentStorageWithFulltextSearch.cs" />
+    <Compile Include="Extensions.cs" />
     <Compile Include="FulltextException.cs" />
     <Compile Include="ICouchbaseDocumentAdapter.cs" />
     <Compile Include="IDocumentStorage.cs" />
