--- a/AspNetPim/packages.config
+++ b/AspNetPim/packages.config
@@ -19,7 +19,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.3" targetFramework="net461" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net461" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.2.0" targetFramework="net461" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
@@ -44,5 +44,6 @@
   <package id="System.Data.SQLite.Core" version="1.0.105.1" targetFramework="net461" />
   <package id="System.Data.SQLite.EF6" version="1.0.105.1" targetFramework="net461" />
   <package id="System.Data.SQLite.Linq" version="1.0.105.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
