--- a/AspNetPim/packages.config
+++ b/AspNetPim/packages.config
@@ -3,8 +3,10 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net461" />
   <package id="AspNet.Identity.LiteDB" version="1.0.0" targetFramework="net461" />
   <package id="Autofac" version="4.6.0" targetFramework="net461" />
+  <package id="Autofac.Extras.CommonServiceLocator" version="4.1.0" targetFramework="net461" />
   <package id="Autofac.Mvc5" version="4.0.2" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
+  <package id="CommonServiceLocator" version="2.0.1" targetFramework="net461" />
   <package id="Couchbase.Lite" version="1.4.0" targetFramework="net461" />
   <package id="Couchbase.Lite.Storage.SystemSQLite" version="1.4.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
