--- a/FulltextStorageLib/FulltextStorageLib.csproj
+++ b/FulltextStorageLib/FulltextStorageLib.csproj
@@ -199,14 +199,12 @@
     <Compile Include="SearchEngine.cs" />
     <Compile Include="LuceneSearchHit.cs" />
     <Compile Include="Util\ActionTask.cs" />
-    <Compile Include="Util\Check.cs" />
     <Compile Include="Util\CompositeTask.cs" />
     <Compile Include="Util\ConditionalTask.cs" />
     <Compile Include="Util\DedicatedThreadTaskScheduler.cs" />
     <Compile Include="Util\DelegatingFactory.cs" />
     <Compile Include="Util\DeleteFileTask.cs" />
     <Compile Include="Util\DictionaryExtensions.cs" />
-    <Compile Include="Util\EnumerableExtensions.cs" />
     <Compile Include="Util\Exceptions.cs" />
     <Compile Include="Util\HashHelper.cs" />
     <Compile Include="Util\IExceptionHandlerTask.cs" />
@@ -216,11 +214,9 @@
     <Compile Include="Util\LimitedConcurrencyScheduler.cs" />
     <Compile Include="Util\ListExtension.cs" />
     <Compile Include="Util\NotifyingTask.cs" />
-    <Compile Include="Util\ObjectExtensions.cs" />
     <Compile Include="Util\RetryTask.cs" />
     <Compile Include="Util\SingletonFactory.cs" />
     <Compile Include="Util\StatefulTask.cs" />
-    <Compile Include="Util\StatisticalFunctions.cs" />
     <Compile Include="Util\StringHelper.cs" />
     <Compile Include="Util\TaskExecutedEventArgs.cs" />
     <Compile Include="Util\TaskExecutor.cs" />
@@ -233,7 +229,12 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Pim.CommonLib\Pim.CommonLib.csproj">
+      <Project>{5743f793-e48a-4441-ac6f-c398fb9b448b}</Project>
+      <Name>Pim.CommonLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\SQLitePCL.native.sqlite3.v110_xp.0.9.3\build\SQLitePCL.native.sqlite3.v110_xp.targets" Condition="Exists('..\packages\SQLitePCL.native.sqlite3.v110_xp.0.9.3\build\SQLitePCL.native.sqlite3.v110_xp.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
